@@ -418,6 +418,10 @@ class SystemTestMixin(pollmixin.PollMixin, testutil.StallMixin):
             if self.stats_gatherer_furl:
                 write("stats_gatherer.furl", self.stats_gatherer_furl)
 
+        # give subclasses a chance to append liens to the node's tahoe.cfg
+        # files before they are launched.
+        self._set_up_nodes_extra_config()
+
         # start client[0], wait for it's tub to be ready (at which point it
         # will have registered the helper furl).
         c = self.add_service(client.Client(basedir=basedirs[0]))
@@ -451,6 +455,10 @@ class SystemTestMixin(pollmixin.PollMixin, testutil.StallMixin):
             self.helper_webish_url = "http://localhost:%d/" % port
         d.addCallback(_connected)
         return d
+
+    def _set_up_nodes_extra_config(self):
+        # for overriding by subclasses
+        pass
 
     def _grab_stats(self, res):
         d = self.stats_gatherer.poll()
