@@ -7,11 +7,12 @@ from twisted.python import log
 from twisted.internet import defer
 from foolscap import eventual
 
-from allmydata import uri
+from allmydata import uri, monitor
 from allmydata.immutable import upload
 from allmydata.interfaces import IFileURI, FileTooLargeError, NotEnoughSharesError
 from allmydata.util.assertutil import precondition
 from allmydata.util.deferredutil import DeferredListShouldSucceed
+from common import SystemTestMixin
 from common_util import ShouldFailMixin
 
 MiB = 1024*1024
@@ -542,6 +543,31 @@ class StorageIndex(unittest.TestCase):
         d.addCallback(_done)
         return d
 
+class EncodingParameters(SystemTestMixin, unittest.TestCase):
+    def test_configure_parameters(self):
+        self.basedir = self.mktemp()
+        DATA = "data" * 100
+        u = upload.Data(DATA, convergence="")
+        d = self.set_up_nodes()
+        d.addCallback(lambda res: self.clients[0].upload(u))
+        d.addCallback(lambda ur: self.clients[0].create_node_from_uri(ur.uri))
+        m = monitor.Monitor()
+        d.addCallback(lambda fn: fn.check(m))
+        def _check(cr):
+            data = cr.get_data()
+            self.failUnlessEqual(data["count-shares-needed"], 7)
+            self.failUnlessEqual(data["count-shares-expected"], 12)
+        d.addCallback(_check)
+        return d
+
+    def _set_up_nodes_extra_config(self):
+        f = open(os.path.join(self.getdir("client0"), "tahoe.cfg"), "wt")
+        f.write("\n")
+        f.write("[client]\n")
+        f.write("shares.needed = 7\n")
+        f.write("shares.total = 12\n")
+        f.write("\n")
+        f.close()
 
 # TODO:
 #  upload with exactly 75 peers (shares_of_happiness)
